# assembly_instances

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  README.rst  package.xml  pytest.ini
bar_assembly/: IT_arch_conmech_model.json  IT_hydra_conmech_model.json  SP_arch_conmech_model.json  SP_column_conmech_model.json  reciprocal_sphere_200_quarter_conmech_model.json  reciprocal_sphere_quarter_conmech_model.json  topopt_vault_tiny_S10_conmech_model.json
extrusion/: C_shape.json  DJMM_bridge.json  README.md  bunny_full_quad.json  bunny_full_tri.json  bunny_full_tri_dense.json  compas_fea_beam_tree.json  compas_fea_beam_tree_M.json  compas_fea_beam_tree_M_simp.json  compas_fea_beam_tree_S.json  compas_fea_beam_tree_S_simp.json  compas_fea_beam_tree_simp.json  compas_fea_truss_frame.json  compas_fea_truss_frame_rotated.json  david.json  dented_cube.json  djmm_test_block_S1_03-14-2019_w_layer.json  duck.json  extreme_beam_test.json  extrusion_exp_L75.0.json  fandisk.json  fertility.json  four-frame.json  klein_bottle.json  klein_bottle_S1.5.json  klein_bottle_trail.json  klein_bottle_trail_S1.5.json  klein_bottle_trail_S2.json  long_beam_test.json  mars_bubble_S1_03-14-2019_w_layer.json  robarch_tree.json  robarch_tree_M.json  robarch_tree_S.json  rotated_dented_cube.json  semi_sphere.json  sig_artopt-bunny_S1_03-14-2019_w_layer.json  simple_frame.json  topopt-100_S1_03-14-2019_w_layer.json  topopt-101_tiny.json  topopt-205_S0.7_03-14-2019_w_layer.json  (+9 more)
extrusion/generation_gh/: dented_cube.gh  (+1 more)
tests/: conftest.py  test_extrusion_stiffness.py
(+79 files in other folders)
