<?xml version="1.0"?>
<package format="2">
  <name>assembly-instances</name>
  <version>0.1.0</version>
  <description>
    assembly-instances for choreo + PDDLStream project.
  </description>

  <maintainer email="yijiangh@mit.edu">Yijiang Huang</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
